--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
     "coffeescript": "1.12.7",
-    "intersection-observer": "^0.4.2"
+    "intersection-observer": "^0.4.2",
+    "jquery": "^2.2.4",
+    "zurb-foundation-5": "^5.4.7"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.1"
