--- a/test/fixtures/memberships.yml
+++ b/test/fixtures/memberships.yml
@@ -2,18 +2,18 @@
 
 one:
   speaker: one
-  party: party_a
+  group: group_a
   since: 2017-01-02 17:48:36
   until:
 
 two:
   speaker: one
-  party: party_b
+  group: group_b
   since: 2016-01-01 17:48:36
   until: 2017-01-01 17:48:36
 
 three:
   speaker: two
-  party: two
+  group: group_b
   since: 2017-09-17 17:48:36
   until: 2017-09-17 17:48:36
