Handle statements with no veracity

--- a/test/fixtures/assessments.yml
+++ b/test/fixtures/assessments.yml
@@ -23,3 +23,10 @@ two:
   evaluation_status: correct
   evaluated_at: 2017-09-18 09:35:56
   disputed: false
+
+assessment_with_no_veracity:
+  statement: statement_with_no_veracity
+  explanation: Correct explanantion but without any veracity
+  evaluation_status: correct
+  evaluated_at: 2017-09-18 09:35:56
+  disputed: false
