--- a/test/fixtures/assessments.yml
+++ b/test/fixtures/assessments.yml
@@ -30,3 +30,11 @@ assessment_with_no_veracity:
   evaluation_status: correct
   evaluated_at: 2017-09-18 09:35:56
   disputed: false
+
+assessment_of_fake_statement:
+  statement: fake_statement
+  explanation: Correct explanantion of fake statement
+  veracity: one
+  evaluation_status: correct
+  evaluated_at: 2017-09-18 09:35:56
+  disputed: false
