--- a/test/fixtures/article_has_segments.yml
+++ b/test/fixtures/article_has_segments.yml
@@ -1,7 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  order: 1
-
-two:
+  segment: one
+  article: one
   order: 1
