Add tests of Body#current_members

--- a/test/fixtures/memberships.yml
+++ b/test/fixtures/memberships.yml
@@ -17,3 +17,9 @@ three:
   body: body_b
   since: 2017-09-17 17:48:36
   until: 2017-09-17 17:48:36
+
+four:
+  speaker: three
+  body: body_a
+  since: 2016-01-01 17:48:36
+  until: 2017-01-01 17:48:36
