--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "zurb-foundation-5": "^5.4.7"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "3",
+    "webpack-dev-server": "^2.11.1"
   }
 }
