--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,10 @@ jobs:
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
 
+      # - run: RAILS_ENV=test bundle exec bin/rails webpacker:compile
+
       # Webpack setup
-      - run: bundle exec bin/webpack
+      - run: RAILS_ENV=test bundle exec bin/webpack
 
       # run rubocop
       - run:
