--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-observable": "^0.18.0",
     "rxjs": "^5.5.8",
     "ts-jest": "^22.4.5",
@@ -81,8 +81,7 @@
       "js"
     ],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
-        "<rootDir>/config/jest//fileMock.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest//fileMock.js",
       "\\.(css|less)$": "<rootDir>/config/jest//styleMock.js"
     }
   }
