--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "graphql": "0.13.2",
     "graphql-tag": "^2.6.1",
     "history": "^4.7.2",
+    "immutable": "^3.8.2",
     "intersection-observer": "^0.4.2",
     "jquery": "^2.2.4",
     "jquery-ujs": "^1.2.2",
@@ -44,6 +45,8 @@
     "redux": "^3.7.2",
     "redux-observable": "^0.18.0",
     "rxjs": "^5.5.8",
+    "slate": "^0.33.6",
+    "slate-react": "^0.12.6",
     "ts-jest": "^22.4.5",
     "ts-loader": "^3.5.0",
     "typescript": "^2.8.3",
