--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^2.3.1",
+    "@blueprintjs/core": "^2.3.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "^0.1.0-11",
@@ -24,6 +25,7 @@
     "@types/react-redux": "^6.0.0",
     "@types/react-router": "^4.0.25",
     "@types/react-router-dom": "^4.2.6",
+    "@types/react-transition-group": "^2.0.11",
     "@types/react-select": "^1.2.7",
     "@types/slate": "git+https://github.com/JanLoebel/types-slate.git",
     "@types/slate-react": "git+https://github.com/JanLoebel/types-slate-react.git",
@@ -35,6 +37,7 @@
     "apollo-link": "1.2.2",
     "apollo-upload-client": "^8.0.0",
     "classnames": "^2.2.6",
+    "date-fns": "^1.29.0",
     "file-loader": "^1.1.11",
     "formik": "^1.0.0-beta.2",
     "graphql": "0.13.2",
@@ -48,10 +51,10 @@
     "lodash": "^4.17.5",
     "luxon": "^1.2.1",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-apollo": "2.1.5",
+    "react": "^16.4.0",
+    "react-apollo": "^2.1.6",
     "react-beautiful-dnd": "^7.1.3",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.4.0",
     "react-dropzone": "^4.2.9",
     "react-hot-loader": "^4.1.3",
     "react-icons": "^2.2.7",
