--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@rails/webpacker": "3.4",
+    "@types/classnames": "^2.2.4",
     "@types/enzyme": "^3.1.10",
     "@types/jest": "^22.2.3",
     "@types/lodash": "^4.14.108",
@@ -17,7 +18,8 @@
     "@types/react-icons": "^2.2.5",
     "@types/react-redux": "^6.0.0",
     "@types/react-router": "^4.0.25",
-    "@types/react-router-dom": "^4.2.6",    
+    "@types/react-router-dom": "^4.2.6",
+    "@types/react-select": "^1.2.7",
     "@types/slate": "git+https://github.com/JanLoebel/types-slate.git",
     "@types/slate-react": "git+https://github.com/JanLoebel/types-slate-react.git",
     "@types/uuid": "^3.4.3",
@@ -26,6 +28,7 @@
     "apollo-client-preset": "^1.0.6",
     "apollo-link": "^1.2.1",
     "apollo-upload-client": "^8.0.0",
+    "classnames": "^2.2.6",
     "file-loader": "^1.1.11",
     "formik": "^0.11.11",
     "graphql": "0.13.2",
