--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lint": "tslint 'app/javascript/**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@blueprintjs/core": "^2.3.1",
     "@rails/webpacker": "3.4",
     "@types/classnames": "^2.2.4",
     "@types/enzyme": "^3.1.10",
@@ -24,9 +25,9 @@
     "@types/slate-react": "git+https://github.com/JanLoebel/types-slate-react.git",
     "@types/uuid": "^3.4.3",
     "activestorage": "^5.2.0",
-    "apollo-client": "^2.2.2",
+    "apollo-client": "2.3.4",
     "apollo-client-preset": "^1.0.6",
-    "apollo-link": "^1.2.1",
+    "apollo-link": "1.2.2",
     "apollo-upload-client": "^8.0.0",
     "classnames": "^2.2.6",
     "file-loader": "^1.1.11",
@@ -42,7 +43,7 @@
     "luxon": "^1.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-apollo": "2.1.4",
+    "react-apollo": "2.1.5",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
     "react-hot-loader": "^4.1.3",
@@ -51,6 +52,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.2.1",
+    "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
     "redux-observable": "^0.18.0",
     "rxjs": "^5.5.8",
