--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "apollo-upload-client": "^8.0.0",
     "classnames": "^2.2.6",
     "file-loader": "^1.1.11",
-    "formik": "^0.11.11",
+    "formik": "^1.0.0-beta.2",
     "graphql": "0.13.2",
     "graphql-tag": "^2.6.1",
     "history": "^4.7.2",
