--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
   },
   "exclude": [
     "**/*.spec.ts",
