--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redux-observable": "^0.18.0",
     "rxjs": "^5.5.8",
     "slate": "^0.33.6",
+    "slate-html-serializer": "^0.6.7",
     "slate-react": "^0.12.6",
     "ts-jest": "^22.4.5",
     "ts-loader": "^3.5.0",
