--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "slate": "^0.33.6",
     "slate-html-serializer": "^0.6.7",
     "slate-react": "^0.12.6",
+    "slate-schema-violations": "^0.1.14",
     "ts-jest": "^22.4.5",
     "ts-loader": "^3.5.0",
     "typescript": "^2.8.3",
