--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash": "^4.14.108",
     "@types/luxon": "^0.5.2",
     "@types/react": "^16.3.11",
+    "@types/react-beautiful-dnd": "^7.1.0",
     "@types/react-dom": "^16.0.5",
     "@types/react-dropzone": "^4.2.0",
     "@types/react-icons": "^2.2.5",
@@ -49,6 +50,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-apollo": "2.1.5",
+    "react-beautiful-dnd": "^7.1.3",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.9",
     "react-hot-loader": "^4.1.3",
