--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
       # Database setup
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
-      - run: bundle exec rake db:seeds
+      - run: bundle exec rake db:seed
 
       # - run: RAILS_ENV=test bundle exec bin/rails webpacker:compile
 
