--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,13 @@
 
 /node_modules
 /yarn-error.log
+yarn-debug.log*
+.yarn-integrity
 
 .byebug_history
 /public/packs
 /public/packs-test
-/node_modules
+/public/assets
 
 config/settings.local.yml
 config/settings/*.local.yml
@@ -42,8 +44,3 @@ config/environments/*.local.yml
 
 # Ignore OS generated files
 .DS_Store
-/public/packs
-/public/packs-test
-/node_modules
-yarn-debug.log*
-.yarn-integrity
