--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "apollo-link": "1.2.2",
     "classnames": "^2.2.6",
     "date-fns": "^1.29.0",
+    "emotion": "^9.2.6",
     "file-loader": "^1.1.11",
     "formik": "^1.0.0-beta.2",
     "graphql": "0.13.2",
