--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-beautiful-dnd": "^7.1.3",
     "react-dom": "^16.4.0",
     "react-dropzone": "^4.2.9",
+    "react-fast-compare": "^2.0.1",
     "react-hot-loader": "^4.1.3",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
