--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dropzone": "^4.2.9",
     "react-fast-compare": "^2.0.1",
     "react-hot-loader": "^4.1.3",
+    "react-mentions": "^2.0.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
