--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,3 +12,4 @@ amazon:
   secret_access_key: <%= ENV["AMAZON_S3_SECRET_ACCESS_KEY"] %>
   region: <%= ENV["AMAZON_S3_REGION"] %>
   bucket: <%= ENV["AMAZON_S3_BUCKET"] %>
+  endpoint: <%= ENV["AMAZON_S3_ENDPOINT"] %>
