--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^22.2.3",
     "@types/lodash": "^4.14.108",
     "@types/luxon": "^0.5.2",
+    "@types/query-string": "^6.1.0",
     "@types/react": "^16.3.11",
     "@types/react-beautiful-dnd": "^7.1.0",
     "@types/react-dom": "^16.0.5",
@@ -49,6 +50,7 @@
     "lodash": "^4.17.5",
     "luxon": "^1.2.1",
     "prop-types": "^15.6.0",
+    "query-string": "^6.1.0",
     "react": "^16.4.0",
     "react-apollo": "^2.1.6",
     "react-beautiful-dnd": "^7.1.3",
