--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/yup": "^0.24.7",
     "activestorage": "^5.2.0",
     "anchorme": "^1.1.2",
-    "apollo-client": "2.3.4",
+    "apollo-client": "~2.3.8",
     "apollo-client-preset": "^1.0.6",
     "apollo-link": "1.2.2",
     "classnames": "^2.2.6",
@@ -54,7 +54,7 @@
     "query-string": "^6.1.0",
     "raven-js": "^3.26.4",
     "react": "^16.4.0",
-    "react-apollo": "^2.1.6",
+    "react-apollo": "~2.1.11",
     "react-beautiful-dnd": "^7.1.3",
     "react-dom": "^16.4.0",
     "react-dropzone": "^4.2.9",
