--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3.0'
 services:
+  redis:
+    image: redis:5.0.0
+    ports:
+      - 6379:6379
+    restart: always
+
   db:
     image: mysql:5.7.23
     ports:
@@ -25,6 +31,7 @@ services:
     links:
       - db
       - webpacker
+      - redis
     ports:
       - 3000:3000
     command: bundle exec rails s -b 0.0.0.0
