Replace legacy raven-js with @sentry/browser

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@blueprintjs/core": "^3.0.1",
     "@blueprintjs/datetime": "^3.0.0",
     "@rails/webpacker": "3.4",
+    "@sentry/browser": "^4.3.0",
     "@types/classnames": "^2.2.4",
     "@types/enzyme": "^3.1.10",
     "@types/jest": "^22.2.3",
@@ -53,7 +54,6 @@
     "luxon": "^1.2.1",
     "prop-types": "^15.6.0",
     "query-string": "^6.1.0",
-    "raven-js": "^3.26.4",
     "react": "^16.4.0",
     "react-apollo": "2.1.6",
     "react-beautiful-dnd": "^7.1.3",
