--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "date-fns": "^1.29.0",
     "emotion": "^9.2.6",
     "file-loader": "^1.1.11",
-    "formik": "^1.0.0-beta.2",
+    "formik": "^1.3.1",
     "graphql": "0.13.2",
     "graphql-tag": "^2.6.1",
     "history": "^4.7.2",
