--- a/package.json
+++ b/package.json
@@ -6,67 +6,67 @@
     "lint": "tslint 'app/javascript/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@blueprintjs/core": "^3.0.1",
-    "@blueprintjs/datetime": "^3.0.0",
+    "@blueprintjs/core": "^3.8.0",
+    "@blueprintjs/datetime": "^3.3.1",
     "@rails/webpacker": "3.4",
     "@sentry/browser": "^4.3.0",
     "@types/classnames": "^2.2.4",
-    "@types/enzyme": "^3.1.10",
-    "@types/jest": "^22.2.3",
-    "@types/lodash": "^4.14.108",
+    "@types/enzyme": "^3.1.15",
+    "@types/jest": "^23.3.9",
+    "@types/lodash": "^4.14.118",
     "@types/luxon": "^0.5.2",
     "@types/query-string": "^6.1.0",
-    "@types/react": "^16.3.11",
+    "@types/react": "^16.7.3",
     "@types/react-beautiful-dnd": "^7.1.0",
-    "@types/react-dom": "^16.0.5",
+    "@types/react-dom": "^16.0.9",
     "@types/react-dropzone": "^4.2.0",
     "@types/react-icons": "^2.2.5",
     "@types/react-redux": "^6.0.0",
     "@types/react-router": "^4.0.25",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-select": "^1.2.7",
-    "@types/react-transition-group": "^2.0.11",
+    "@types/react-transition-group": "^2.0.14",
     "@types/slate": "^0.43.1",
     "@types/slate-html-serializer": "^0.6.2",
     "@types/slate-react": "^0.20.1",
-    "@types/uuid": "^3.4.3",
-    "@types/yup": "^0.24.7",
+    "@types/uuid": "^3.4.4",
+    "@types/yup": "^0.26.1",
     "activestorage": "^5.2.0",
     "anchorme": "^1.1.2",
-    "apollo-client": "2.3.4",
-    "apollo-client-preset": "^1.0.6",
-    "apollo-link": "1.2.2",
+    "apollo": "^2.0.15",
+    "apollo-boost": "^0.1.20",
+    "apollo-client": "^2.4.5",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "date-fns": "^1.29.0",
     "emotion": "^9.2.6",
     "file-loader": "^1.1.11",
-    "formik": "^1.0.0-beta.2",
-    "graphql": "0.13.2",
-    "graphql-tag": "^2.6.1",
+    "formik": "^1.3.1",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
     "intersection-observer": "^0.4.2",
     "is-hotkey": "^0.1.4",
     "jquery": "^2.2.4",
     "jquery-ujs": "^1.2.2",
-    "lodash": "^4.17.5",
+    "lodash": "^4.7.11",
     "luxon": "^1.2.1",
     "prop-types": "^15.6.0",
     "query-string": "^6.1.0",
-    "react": "^16.4.0",
-    "react-apollo": "2.1.6",
+    "react": "^16.6.1",
+    "react-apollo": "^2.2.4",
     "react-beautiful-dnd": "^7.1.3",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.6.1",
     "react-dropzone": "^4.2.9",
     "react-fast-compare": "^2.0.1",
-    "react-hot-loader": "^4.1.3",
+    "react-hot-loader": "^4.3.12",
     "react-mentions": "^2.0.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.2.1",
-    "react-transition-group": "^2.3.1",
+    "react-transition-group": "^2.5.0",
     "redux": "^3.7.2",
     "redux-observable": "^0.18.0",
     "rxjs": "^5.5.8",
@@ -75,20 +75,19 @@
     "slate-react": "^0.21.11",
     "slate-schema-violations": "^0.1.39",
     "slate-soft-break": "^0.9.0",
-    "ts-jest": "^22.4.5",
+    "ts-jest": "^23.10.4",
     "ts-loader": "^3.5.0",
-    "typescript": "^3.0.3",
-    "uuid": "^3.2.1",
+    "typescript": "^3.1.6",
+    "uuid": "^3.3.2",
     "webpack": "3.10.0",
     "whatwg-fetch": "^2.0.4",
-    "yup": "^0.25.1",
+    "yup": "^0.26.6",
     "zurb-foundation-5": "^5.4.7"
   },
   "devDependencies": {
-    "apollo-codegen": "0.19.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "jest": "^22.4.3",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "jest": "^23.6.0",
     "prettier": "^1.13.4",
     "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.2.0",
