--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,10 @@ jobs:
             bundle install --jobs=4 --retry=3 --path vendor/bundle
 
       - run:
+          name: Upgrade Yarn
+          command: npm install -g yarn
+
+      - run:
           name: Yarn Install
           command: yarn install
 
