--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
   },
   "devDependencies": {
     "apollo-codegen": "0.19.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.9.1",
     "jest": "^22.4.3",
     "postcss-cssnext": "^3.1.0",
     "prettier": "^1.13.4",
