--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,8 @@ jobs:
       # specify the version you desire here
       - image: circleci/ruby:2.5.1-node
         environment:
-          DB_HOST: 127.0.0.1
+          DB_HOST: localhost
+          DB_USERNAME: circleci-demo-go
           RAILS_ENV: test
 
       # Specify service dependencies here if necessary
@@ -17,11 +18,10 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-      - image: circleci/mysql:5.7.18
+      - image: circleci/postgres:9.6-alpine
         environment:
-         - MYSQL_ALLOW_EMPTY_PASSWORD=true
-         - MYSQL_HOST=127.0.0.1
-         - MYSQL_ROOT_HOST=%
+          POSTGRES_USER: circleci-demo-go
+          POSTGRES_DB: demagog_test
 
     working_directory: ~/repo
 
