--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
       - run: bundle exec rake db:seed
+      - run: bundle exec rails dbconsole <<< "CREATE EXTENSION unaccent;"
 
       # - run: RAILS_ENV=test bundle exec bin/rails webpacker:compile
 
