Second promises update

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "jquery-ujs": "^1.2.2",
     "lodash": "^4.17.5",
     "luxon": "^1.2.1",
+    "memoize-one": "^5.0.2",
+    "pdfjs-dist": "^2.0.943",
     "postcss-cssnext": "^3.1.0",
     "prop-types": "^15.6.0",
     "query-string": "^6.1.0",
@@ -62,7 +64,9 @@
     "react-dropzone": "^4.2.9",
     "react-fast-compare": "^2.0.1",
     "react-hot-loader": "^4.3.12",
+    "react-in-viewport": "^0.0.37",
     "react-mentions": "^2.0.1",
+    "react-pdf": "^4.0.5",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
