--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "slate-react": "^0.21.11",
     "slate-schema-violations": "^0.1.39",
     "slate-soft-break": "^0.9.0",
+    "stimulus": "^1.1.1",
     "ts-jest": "^22.4.5",
     "ts-loader": "5.3.3",
     "typescript": "^3.1.6",
