--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "apollo-client": "2.3.4",
     "apollo-client-preset": "^1.0.6",
     "apollo-link": "1.2.2",
+    "classlist-polyfill": "^1.2.0",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "css-vars-ponyfill": "^1.17.2",
     "date-fns": "^1.29.0",
+    "element-closest": "^3.0.1",
     "emotion": "^9.2.6",
     "file-loader": "^1.1.11",
     "formik": "^1.3.1",
