--- a/package.json
+++ b/package.json
@@ -84,9 +84,9 @@
     "slate-schema-violations": "^0.1.39",
     "slate-soft-break": "^0.9.0",
     "stimulus": "^1.1.1",
-    "ts-jest": "^22.4.5",
+    "ts-jest": "^24.0.2",
     "ts-loader": "5.3.3",
-    "typescript": "^3.1.6",
+    "typescript": "^3.4.5",
     "uuid": "^3.2.1",
     "webpack": "4.29.0",
     "whatwg-fetch": "^3.0.0",
@@ -97,7 +97,7 @@
     "apollo-codegen": "0.19.1",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.9.1",
-    "jest": "^22.4.3",
+    "jest": "^24.7.1",
     "prettier": "^1.13.4",
     "stylelint": "^9.2.0",
     "stylelint-config-standard": "^18.2.0",
@@ -108,9 +108,9 @@
     "webpack-dev-server": "^3.1.14"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>/config/jest/jest.setup.js",
+    "setupFilesAfterEnv": ["<rootDir>/config/jest/jest.setup.js"],
     "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      ".(ts|tsx)": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?)$",
     "collectCoverageFrom": [
