--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,8 +77,8 @@ jobs:
 
       # Database setup
       - run: bin/rails db:create
-      - run: bin/rails rake db:schema:load
-      - run: bin/rails rake db:seed
+      - run: bin/rails db:schema:load
+      - run: bin/rails db:seed
 
       # Webpack setup
       - run: RAILS_ENV=test bin/webpack
