--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,8 @@ jobs:
           fingerprints:
             - "58:90:71:2a:18:2d:40:bf:7e:bb:26:a5:3e:4d:d9:25"
 
+      - run: sudo apt install rsync
+
       - run:
           name: Deploy to production
           command: bundle exec cap production deploy
