--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "react-router-dom": "^4.3.1",
     "react-select": "^2.1.1",
     "react-transition-group": "^2.3.1",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.3",
     "redux": "^4.0.1",
     "redux-observable": "^1.0.0",
     "rxjs": "^6.3.3",
