--- a/package.json
+++ b/package.json
@@ -6,35 +6,34 @@
     "lint": "tslint 'app/javascript/**/*.{ts,tsx}'"
   },
   "dependencies": {
-    "@babel/core": "^7.5.0",
-    "@blueprintjs/core": "~3.8.0",
-    "@blueprintjs/datetime": "^3.3.1",
-    "@emotion/core": "^10.0.21",
-    "@emotion/styled": "^10.0.17",
-    "@rails/webpacker": "^4.0.7",
-    "@sentry/browser": "^4.3.0",
-    "@types/classnames": "^2.2.4",
-    "@types/enzyme": "^3.1.10",
+    "@babel/core": "^7.7.4",
+    "@blueprintjs/core": "^3.21.0",
+    "@blueprintjs/datetime": "^3.15.1",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "@rails/webpacker": "4.2.0",
+    "@sentry/browser": "^4.6.6",
+    "@types/classnames": "^2.2.9",
+    "@types/enzyme": "^3.10.3",
     "@types/jest": "^22.2.3",
-    "@types/lodash": "^4.14.108",
-    "@types/luxon": "^0.5.2",
-    "@types/query-string": "^6.1.0",
-    "@types/react": "^16.9.9",
-    "@types/react-beautiful-dnd": "^7.1.0",
-    "@types/react-dom": "^16.9.2",
-    "@types/react-dropzone": "^4.2.0",
-    "@types/react-icons": "^2.2.5",
+    "@types/lodash": "^4.14.149",
+    "@types/luxon": "^0.5.3",
+    "@types/react": "^16.9.12",
+    "@types/react-beautiful-dnd": "^7.1.2",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-dropzone": "^4.2.2",
+    "@types/react-icons": "^2.2.7",
     "@types/react-redux": "^7.1.5",
-    "@types/react-router": "^4.4.1",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-select": "^2.0.6",
-    "@types/react-transition-group": "^2.0.11",
-    "@types/slate": "^0.43.1",
-    "@types/slate-html-serializer": "^0.6.2",
-    "@types/slate-react": "^0.20.1",
-    "@types/uuid": "^3.4.3",
-    "@types/yup": "^0.26.1",
-    "activestorage": "^5.2.0",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/react-select": "^2.0.19",
+    "@types/react-transition-group": "^2.9.2",
+    "@types/slate": "0.43.9",
+    "@types/slate-html-serializer": "^0.6.3",
+    "@types/slate-react": "0.20.3",
+    "@types/uuid": "^3.4.6",
+    "@types/yup": "^0.26.24",
+    "activestorage": "^5.2.3",
     "anchorme": "^1.1.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
@@ -43,87 +42,89 @@
     "babel-loader": "^8.0.6",
     "classlist-polyfill": "^1.2.0",
     "classnames": "^2.2.6",
-    "copy-to-clipboard": "^3.0.8",
-    "core-js": "^3.1.4",
+    "copy-to-clipboard": "^3.2.0",
+    "core-js": "^3.4.2",
     "css-loader": "^2.1.1",
     "css-vars-ponyfill": "^1.17.2",
-    "date-fns": "^1.29.0",
+    "date-fns": "^1.30.1",
     "element-closest": "^3.0.1",
-    "emotion": "^9.2.6",
+    "emotion": "^9.2.12",
     "file-loader": "^1.1.11",
-    "formik": "^1.3.1",
-    "graphql": "^14.2.1",
+    "formik": "^1.5.8",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
-    "history": "^4.7.2",
+    "history": "^4.10.1",
     "immutable": "^3.8.2",
     "intersection-observer": "^0.4.2",
-    "is-hotkey": "^0.1.4",
-    "lodash": "^4.17.5",
-    "luxon": "^1.2.1",
-    "memoize-one": "^5.0.2",
-    "micromodal": "^0.4.0",
-    "pdfjs-dist": "^2.0.943",
+    "is-hotkey": "^0.1.6",
+    "lodash": "^4.17.15",
+    "luxon": "^1.21.2",
+    "memoize-one": "^5.1.1",
+    "micromodal": "^0.4.2",
+    "pdfjs-dist": "2.1.266",
     "postcss-cssnext": "^3.1.0",
-    "query-string": "^6.1.0",
-    "react": "^16.10.2",
+    "query-string": "^6.9.0",
+    "react": "^16.12.0",
     "react-apollo": "3.1.3",
     "react-beautiful-dnd": "^7.1.3",
-    "react-dom": "^16.10.2",
-    "react-dropzone": "^4.2.9",
-    "react-fast-compare": "^2.0.1",
-    "react-hot-loader": "^4.3.12",
+    "react-dom": "^16.12.0",
+    "react-dropzone": "^4.3.0",
+    "react-fast-compare": "^2.0.4",
+    "react-hot-loader": "^4.12.18",
     "react-in-viewport": "^0.0.37",
-    "react-mentions": "^2.0.1",
-    "react-pdf": "^4.0.5",
-    "react-redux": "^7.1.1",
+    "react-mentions": "^2.4.2",
+    "react-pdf": "^4.1.0",
+    "react-redux": "^7.1.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-select": "^2.1.1",
+    "react-select": "^2.4.4",
     "react-tooltip": "^3.11.1",
-    "react-transition-group": "^2.3.1",
+    "react-transition-group": "^2.9.0",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.3",
+    "react-window": "^1.8.5",
     "react-youtube": "^7.9.0",
-    "redux": "^4.0.1",
-    "redux-observable": "^1.0.0",
-    "regenerator-runtime": "^0.13.2",
-    "rxjs": "^6.3.3",
-    "slate": "^0.44.5",
-    "slate-html-serializer": "^0.7.29",
-    "slate-react": "^0.21.11",
+    "redux": "^4.0.4",
+    "redux-observable": "^1.2.0",
+    "regenerator-runtime": "^0.13.3",
+    "rxjs": "^6.5.3",
+    "slate": "^0.44.13",
+    "slate-html-serializer": "^0.7.39",
+    "slate-react": "^0.21.24",
     "slate-schema-violations": "^0.1.39",
     "slate-soft-break": "^0.9.0",
     "stimulus": "^1.1.1",
+    "style-loader": "^1.0.0",
     "tippy.js": "^4.3.5",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^24.2.0",
     "ts-loader": "5.3.3",
-    "typescript": "^3.4.5",
-    "uuid": "^3.2.1",
-    "webpack": "4.29.0",
+    "typescript": "^3.7.2",
+    "uuid": "^3.3.3",
+    "webpack": "4.41.2",
     "whatwg-fetch": "^3.0.0",
-    "yup": "^0.26.6",
-    "zurb-foundation-5": "^5.4.7"
+    "yup": "^0.26.10"
   },
   "devDependencies": {
     "@prettier/plugin-ruby": "^0.14.0",
-    "@types/node": "^12.12.5",
+    "@types/node": "^12.12.12",
     "apollo": "2.21.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.9.1",
-    "jest": "^24.7.1",
-    "prettier": "^1.13.4",
-    "stylelint": "^9.2.0",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-scss": "^3.0.1",
-    "tslint": "^5.11.0",
-    "tslint-plugin-prettier": "^2.0.0",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "jest": "^24.9.0",
+    "prettier": "^1.19.1",
+    "stylelint": "^9.10.1",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-scss": "^3.13.0",
+    "tslint": "^5.20.1",
+    "tslint-plugin-prettier": "^2.0.1",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "resolutions": {
     "fstream": "1.0.12",
     "@types/graphql": "14.2.2",
-    "@types/react": "16.9.11"
+    "@types/react": "16.9.12",
+    "@types/slate": "0.43.9",
+    "react-day-picker": "7.3.2"
   },
   "jest": {
     "setupFilesAfterEnv": [
