--- a/package.json
+++ b/package.json
@@ -7,8 +7,28 @@
   },
   "dependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/polyfill": "^7.8.7",
     "@blueprintjs/core": "^3.22.3",
     "@blueprintjs/datetime": "^3.15.1",
+    "@ckeditor/ckeditor5-autoformat": "^18.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^18.0.0",
+    "@ckeditor/ckeditor5-core": "^18.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^12.0.9",
+    "@ckeditor/ckeditor5-editor-classic": "^18.0.0",
+    "@ckeditor/ckeditor5-essentials": "^18.0.0",
+    "@ckeditor/ckeditor5-heading": "^18.0.0",
+    "@ckeditor/ckeditor5-image": "^18.0.0",
+    "@ckeditor/ckeditor5-link": "^18.0.0",
+    "@ckeditor/ckeditor5-list": "^18.0.0",
+    "@ckeditor/ckeditor5-media-embed": "^18.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^18.0.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^18.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@ckeditor/ckeditor5-special-characters": "^18.0.0",
+    "@ckeditor/ckeditor5-table": "^18.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^18.0.0",
+    "@ckeditor/ckeditor5-typing": "^18.0.0",
+    "@ckeditor/ckeditor5-widget": "^18.0.0",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@rails/webpacker": "4.2.0",
@@ -64,6 +84,7 @@
     "pdfjs-dist": "2.1.266",
     "postcss-cssnext": "^3.1.0",
     "query-string": "^6.9.0",
+    "raw-loader": "^4.0.0",
     "react": "^16.12.0",
     "react-apollo": "3.1.3",
     "react-beautiful-dnd": "^7.1.3",
