--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "tippy.js": "^4.3.5",
     "ts-jest": "^24.2.0",
     "ts-loader": "5.3.3",
-    "typescript": "^3.7.4",
+    "typescript": "3.9.5",
     "uuid": "^3.3.3",
     "webpack": "4.41.2",
     "whatwg-fetch": "^3.0.0",
