--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "activestorage": "^5.2.4",
     "anchorme": "^1.1.2",
     "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link": "1.2.13",
-    "apollo-link-http": "1.5.16",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
     "babel-loader": "^8.0.6",
     "classlist-polyfill": "^1.2.0",
     "classnames": "^2.2.6",
@@ -86,7 +86,7 @@
     "query-string": "^6.9.0",
     "raw-loader": "^4.0.0",
     "react": "^16.12.0",
-    "react-apollo": "3.1.3",
+    "react-apollo": "^3.1.5",
     "react-beautiful-dnd": "^7.1.3",
     "react-dom": "^16.12.0",
     "react-dropzone": "^4.3.0",
@@ -128,7 +128,7 @@
   "devDependencies": {
     "@prettier/plugin-ruby": "^0.14.0",
     "@types/node": "^12.12.12",
-    "apollo": "2.21.2",
+    "apollo": "^2.28.3",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.9.1",
     "jest": "^24.9.0",
