--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-hot-loader": "^4.12.18",
     "react-in-viewport": "^0.0.37",
     "react-mentions": "^2.4.2",
+    "react-modal-hook": "^3.0.0",
     "react-pdf": "^4.1.0",
     "react-redux": "^7.1.3",
     "react-router": "^4.3.1",
