All rich text content edited in CKEditor, CKEditor v21, fixed embeds

--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "@babel/polyfill": "^7.8.7",
     "@blueprintjs/core": "^3.22.3",
     "@blueprintjs/datetime": "^3.15.1",
-    "@ckeditor/ckeditor5-autoformat": "^18.0.0",
-    "@ckeditor/ckeditor5-basic-styles": "^18.0.0",
-    "@ckeditor/ckeditor5-core": "^18.0.0",
-    "@ckeditor/ckeditor5-dev-utils": "^12.0.9",
-    "@ckeditor/ckeditor5-editor-classic": "^18.0.0",
-    "@ckeditor/ckeditor5-essentials": "^18.0.0",
-    "@ckeditor/ckeditor5-heading": "^18.0.0",
-    "@ckeditor/ckeditor5-image": "^18.0.0",
-    "@ckeditor/ckeditor5-link": "^18.0.0",
-    "@ckeditor/ckeditor5-list": "^18.0.0",
-    "@ckeditor/ckeditor5-media-embed": "^18.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^18.0.0",
-    "@ckeditor/ckeditor5-paste-from-office": "^18.0.0",
+    "@ckeditor/ckeditor5-autoformat": "^21.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^21.0.0",
+    "@ckeditor/ckeditor5-core": "^21.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^23.2.0",
+    "@ckeditor/ckeditor5-editor-classic": "^21.0.0",
+    "@ckeditor/ckeditor5-essentials": "^21.0.0",
+    "@ckeditor/ckeditor5-heading": "^21.0.0",
+    "@ckeditor/ckeditor5-image": "^21.0.0",
+    "@ckeditor/ckeditor5-link": "^21.0.0",
+    "@ckeditor/ckeditor5-list": "^21.0.0",
+    "@ckeditor/ckeditor5-media-embed": "^21.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^21.0.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@ckeditor/ckeditor5-special-characters": "^18.0.0",
-    "@ckeditor/ckeditor5-table": "^18.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^18.0.0",
-    "@ckeditor/ckeditor5-typing": "^18.0.0",
-    "@ckeditor/ckeditor5-widget": "^18.0.0",
+    "@ckeditor/ckeditor5-special-characters": "^21.0.0",
+    "@ckeditor/ckeditor5-table": "^21.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^21.0.0",
+    "@ckeditor/ckeditor5-typing": "^21.0.0",
+    "@ckeditor/ckeditor5-widget": "^21.0.0",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@rails/webpacker": "4.2.0",
@@ -49,7 +49,6 @@
     "@types/react-select": "^2.0.19",
     "@types/react-transition-group": "^2.9.2",
     "@types/slate": "0.43.9",
-    "@types/slate-html-serializer": "^0.6.3",
     "@types/slate-react": "0.20.3",
     "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.24",
@@ -111,10 +110,8 @@
     "regenerator-runtime": "^0.13.3",
     "rxjs": "^6.5.4",
     "slate": "^0.44.13",
-    "slate-html-serializer": "^0.7.39",
+    "slate-plain-serializer": "^0.7.1",
     "slate-react": "^0.21.24",
-    "slate-schema-violations": "^0.1.39",
-    "slate-soft-break": "^0.9.0",
     "stimulus": "^1.1.1",
     "style-loader": "^1.0.0",
     "tippy.js": "^4.3.5",
