Add schedule section to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,8 @@ updates:
   directory: "/"
   labels:
     - "dependencies"
+  schedule:
+    interval: 'daily'
   open-pull-requests-limit: 10
   reviewers:
   - vaclavbohac
