Support staging env

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,5 +82,7 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+staging:
+  url: <%= ENV['DATABASE_URL'] %>
 production:
   url: <%= ENV['DATABASE_URL'] %>
