Enable compilation for production

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -90,9 +90,7 @@ staging:
 
 production:
   <<: *default
-
-  # Production depends on precompilation of packs prior to booting for performance.
-  compile: false
+  compile: true
 
   # Extract and emit a css file
   extract_css: true
