--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ config/environments/*.local.yml
 
 # Ignore OS generated files
 .DS_Store
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
