fixup! New .ts, .tsx linting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
+    "skipLibCheck": true
   },
   "exclude": [
     "node_modules",
